--- a/templates/g-brain_recherche.html
+++ b/templates/g-brain_recherche.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="g-brain_recherche.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/g-brain_recherche.css') }}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" charset="utf-8"></script>
     <title>Résultats de recherche - G-Brain</title>
 </head>
@@ -11,7 +11,7 @@
 
     <!-- Logo -->
     <header>
-        <a href="g-brain_principal.html"><img src="Logo_complet.png" alt="Logo: G-Brain" class="logo"></a>
+        <a href="g-brain_principal.html"><img src="{{ url_for('static', filename='images/Logo_complet.png') }}" alt="Logo: G-Brain" class="logo"></a>
     </header>
 
     <!-- Barre de recherche -->
