recherche depuis le menu principal

--- a/static/styles/g-brain_principal.css
+++ b/static/styles/g-brain_principal.css
@@ -36,7 +36,7 @@ header {
 }
 
 /* Champ de recherche */
-.search-bar input {
+.search-bar #searchInput {
     width: 300px;
     padding: 10px 15px;
     border: 2px solid #ccc;
@@ -46,13 +46,13 @@ header {
 }
 
 /* Effet focus */
-.search-bar input:focus {
+.search-bar #searchInput:focus {
     border-color: #eb2f1c;
     outline: none;
 }
 
 /* Bouton de recherche */
-.search-bar button {
+.search-bar #Submit {
     padding: 10px 15px;
     background-color: #eb2f1c;
     color: white;
@@ -63,6 +63,6 @@ header {
     font-size: 16px;
 }
 
-.search-bar button:hover {
+.search-bar #Submit:hover {
     background-color: #c42514;
 }
