--- a/templates/g-brain_principal.html
+++ b/templates/g-brain_principal.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/g-brain_principal.css') }}"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" charset="utf-8"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='styles/g-brain_principal.css') }}"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+      charset="utf-8"
+    ></script>
     <title>G-Brain</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="logo-container">
-            <a href="#"><img src="{{ url_for('static', filename='images/Logo_complet.png') }}" alt="Logo: G-Brain" class="logo"></a>
-        </div>
+      <div class="logo-container">
+        <a href="#"
+          ><img
+            src="{{ url_for('static', filename='images/Logo_complet.png') }}"
+            alt="Logo: G-Brain"
+            class="logo"
+        /></a>
+      </div>
     </header>
 
-    <div class="search-bar">
-        <input type="text" id="searchInput" placeholder="Rechercher un graphe sur G-Brain..." required>
-        <button id="searchButton">🔍</button>
-    </div>
+    <form method="post" class="search-bar">
+      <input
+        type="text"
+        name="rechercher"
+        id="searchInput"
+        placeholder="Rechercher un graphe sur G-Brain..."
+        required
+      />
+      <input id="Submit" type="submit" value="🔍" />
+    </form>
 
     <script>
-        function rechercher() {
-            let query = document.getElementById("searchInput").value.trim();
-            if (query) {
-                window.location.href = `g-brain_recherche.html?search=${encodeURIComponent(query)}`;
-            }
+      function rechercher() {
+        let query = document.getElementById("searchInput").value.trim();
+        if (query) {
+          window.location.href = `g-brain_recherche.html?search=${encodeURIComponent(
+            query
+          )}`;
         }
+      }
 
-        document.getElementById("searchButton").addEventListener("click", rechercher);
-        document.getElementById("searchInput").addEventListener("keypress", function(event) {
-            if (event.key === "Enter") {
-                rechercher();
-            }
+      document
+        .getElementById("searchButton")
+        .addEventListener("click", rechercher);
+      document
+        .getElementById("searchInput")
+        .addEventListener("keypress", function (event) {
+          if (event.key === "Enter") {
+            rechercher();
+          }
         });
     </script>
-</body>
+  </body>
 </html>
