--- a/templates/g-brain_recherche.html
+++ b/templates/g-brain_recherche.html
@@ -26,15 +26,16 @@
     </header>
 
     <!-- Barre de recherche -->
-    <div class="search-bar">
+    <form method="post" class="search-bar">
       <input
         type="text"
+        name="rechercher"
         id="searchInput"
         placeholder="Rechercher un graphe sur G-Brain..."
         required
       />
-      <button id="searchButton">🔍</button>
-    </div>
+      <input id="Submit" type="submit" value="🔍" />
+    </form>
 
     <!-- Liste des graphiques -->
     <div class="graphiques">
