--- a/templates/g-brain_recherche.html
+++ b/templates/g-brain_recherche.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Logo -->
     <header>
-      <a href="g-brain_principal.html"
+      <a href="http://127.0.0.1:5000/"
         ><img
           src="{{ url_for('static', filename='images/Logo_complet.png') }}"
           alt="Logo: G-Brain"
