--- a/templates/404.html
+++ b/templates/404.html
@@ -10,6 +10,7 @@
     />
   </head>
   <body>
+    <!-- Navbar -->
     <header>
       <img
         src="{{ url_for('static', filename='images/Logo_complet.png') }}"
@@ -18,8 +19,10 @@
       />
     </header>
 
+    <!-- Paragraphe d'erreur -->
     <p>Erreur 404<br />Page introuvable</p>
 
+    <!-- Boutton -->
     <button><a href="http://127.0.0.1:5000/">Retourner au menu</a></button>
 
     <script src="{{ url_for('static', filename='scripts/error.js') }}"></script>
