--- a/templates/g-brain_principal.html
+++ b/templates/g-brain_principal.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="logo-container">
-        <a href="/"
+        <a href="http://127.0.0.1:5000/"
           ><img
             src="{{ url_for('static', filename='images/Logo_complet.png') }}"
             alt="Logo: G-Brain"
