--- a/templates/g-brain_graphe.html
+++ b/templates/g-brain_graphe.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="g-brain_graphe.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',
+    filename='styles/g-brain_graphe.css') }}"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.0.0/chart.umd.js"></script>
     <title>Graphique - G-Brain</title>
   </head>
@@ -11,7 +16,10 @@
     <!-- Logo -->
     <header>
       <a href="http://127.0.0.1:5000/"
-        ><img src="Logo_complet.png" alt="Logo: G-Brain" class="logo"
+        ><img
+          src="{{ url_for('static', filename='images/Logo_complet.png') }}"
+          alt="Logo: G-Brain"
+          class="logo"
       /></a>
     </header>
 
