--- a/templates/g-brain_connexion.html
+++ b/templates/g-brain_connexion.html
@@ -8,7 +8,7 @@
       type="text/css"
       href="{{ url_for('static', filename='styles/g-brain_connexion.css') }}"
     />
-    <link rel="icon" href="logo_short.png">
+    <link rel="icon" href="logo_short.png" />
     <title>Page de connexion - G-Brain</title>
   </head>
   <body>
@@ -25,13 +25,14 @@
     <div class="login-container">
       <h2>Connexion</h2>
       <form id="loginForm">
-          <label for="username">Identifiant</label>
-          <input type="text" id="username" required>
-          
-          <label for="password">Mot de passe</label>
-          <input type="password" id="password" required>
-          
-          <button type="submit">Se connecter</button>
+        <label for="username">Identifiant</label>
+        <input type="text" name="Nom" id="username" required />
+
+        <label for="password">Mot de passe</label>
+        <input type="password" name="Pass" id="password" required />
+
+        <button type="submit">Se connecter</button>
       </form>
     </div>
   </body>
+</html>
