besoins page ajout

--- a/templates/g-brain_ajout.html
+++ b/templates/g-brain_ajout.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-</head>
-<body>
-    <p>test</p>
-</body>
+  </head>
+  <body>
+    <form>
+      <label for="file"></label>
+      <input type="file" name="file" />
+
+      <label for="data1"></label>
+      <select name="data1">
+        <option value="ex1">ex1</option>
+        <option value="ex2">ex2</option>
+      </select>
+      <label for="data2"> en fonction de </label>
+      <select name="data2">
+        <option value="ex1">ex1</option>
+        <option value="ex2">ex2</option>
+      </select>
+      <input type="submit" />
+    </form>
+  </body>
 </html>
