--- a/templates/g-brain_ajout.html
+++ b/templates/g-brain_ajout.html
@@ -5,21 +5,10 @@
     <title>Title</title>
   </head>
   <body>
-    <form>
+    <form method="POST" action="/connexion" enctype="multipart/form-data">
       <label for="file"></label>
-      <input type="file" name="file" />
-
-      <label for="data1"></label>
-      <select name="data1">
-        <option value="ex1">ex1</option>
-        <option value="ex2">ex2</option>
-      </select>
-      <label for="data2"> en fonction de </label>
-      <select name="data2">
-        <option value="ex1">ex1</option>
-        <option value="ex2">ex2</option>
-      </select>
-      <input type="submit" />
+      <input type="file" name="file" accept=".csv" required />
+      <input type="submit" value="Valider" />
     </form>
   </body>
 </html>
