ajout icon onglet

--- a/templates/404.html
+++ b/templates/404.html
@@ -8,6 +8,8 @@
       type="text/css"
       href="{{ url_for('static', filename='styles/error.css') }}"
     />
+    <link rel="icon" type="image/png" href="{{ url_for('static',filename='images/logodesign.png') }}">
+    <title>Page d'erreur 404 - G-Brain</title>
   </head>
   <body>
     <!-- Navbar -->
