--- a/templates/g-brain_connexion.html
+++ b/templates/g-brain_connexion.html
@@ -8,7 +8,7 @@
       type="text/css"
       href="{{ url_for('static', filename='styles/g-brain_connexion.css') }}"
     />
-    <link rel="icon" href="logo_short.png" />
+    <link rel="icon" type="image/png" href="{{ url_for('static',filename='images/logodesign.png') }}">
     <title>Page de connexion - G-Brain</title>
   </head>
   <body>
