--- a/templates/g-brain_ajout-bdd.html
+++ b/templates/g-brain_ajout-bdd.html
@@ -8,6 +8,8 @@
     type="text/css"
     href="{{ url_for('static', filename='styles/g-brain_ajout-bdd.css') }}"
     />
+    <link rel="icon" type="image/png" href="{{ url_for('static',filename='images/logodesign.png') }}">
+    <title>Page d'ajout de bdd - G-Brain</title>
   </head>
   <body>
     <header>
