--- a/templates/g-brain_graphe.html
+++ b/templates/g-brain_graphe.html
@@ -10,6 +10,7 @@
     filename='styles/g-brain_graphe.css') }}"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.0.0/chart.umd.js"></script>
+    <link rel="icon" type="image/png" href="{{ url_for('static',filename='images/logodesign.png') }}">
     <title>Graphique - G-Brain</title>
   </head>
   <body>
