--- a/templates/g-brain_recherche.html
+++ b/templates/g-brain_recherche.html
@@ -12,6 +12,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
       charset="utf-8"
     ></script>
+    <link rel="icon" type="image/png" href="{{ url_for('static',filename='images/logodesign.png') }}">
     <title>Résultats de recherche - G-Brain</title>
   </head>
   <body>
